[build-system]
requires = ["setuptools>=61.2", "wheel"]

[project]
name = "ptn.boozebot"
description = "Pilots Trade Network Booze Bot"
authors = [
    { name = "Conshmea"},
    { name = "Axle Antilles"},
    { name = "IndorilReborn"},
    { name = "Graeme Cruickshank"},
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["PTN"]
requires-python = "~=3.13.0"
dependencies = [
    "discord-py~=2.5",
    "discord-ext-prometheus~=0.2.1",
    "google-api-python-client~=2.187.0",
    "gspread~=6.0.2",
    "gspread_asyncio~=2.0.0",
    "loguru~=0.7.3",
    "python-dotenv~=1.0.1",
    "requests~=2.32.5",
    "httpx~=0.28.1",
    "ptn-utils",
    "isort==7.0.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "ptn.boozebot.__version__" }  # any module attribute compatible with ast.literal_eval

[tool.setuptools.packages.find]
where = ["."]
include = ["ptn.boozebot*"]

[project.scripts]
booze = "ptn.boozebot.application:run"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.uv.sources]
ptn-utils = { git = "https://github.com/PilotsTradeNetwork/PTN-Library.git", rev = "0.2.5" }

[dependency-groups]
dev = [
    "basedpyright~=1.32.1",
    "ipython~=9.7.0",
    "ruff~=0.14.3",
]
