[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml] >= 6"]
build-backend = "setuptools.build_meta"

[project]
name = "ptn.boozebot"
description = "Pilots Trade Network Booze Bot"
authors = [
    { name = "Conshmea"},
    { name = "Axle Antilles"},
    { name = "IndorilReborn"},
    { name = "Graeme Cruickshank"},
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["PTN"]
requires-python = "~=3.13.0"
dependencies = [
    "discord-py~=2.7",
    "discord-ext-prometheus~=0.2.1",
    "isodate~=0.7.2",
    "loguru~=0.7.3",
    "python-dotenv~=1.2.2",
    "requests~=2.32.5",
    "httpx~=0.28.1",
    "tenacity~=9.1.4",
    "ptn-utils",
    "websockets"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ptn.boozebot*"]

[project.scripts]
booze = "ptn.boozebot.application:run"

[tool.setuptools_scm]
# this is used populated when creating a git archive
# and when there is .git dir and/or there is no git installed
fallback_version = "0.0.0+unknown"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "PL",  # pylint-convention
    "I",   # isort
    # "N",   # pep8-naming  (31 errors)
    # "RUF", # ruff (54 errors)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "A",   # flake8-builtins
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "EXE", # flake8-executable
    "FA",  # flake8-annotation
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "PERF", # perflint
    "FURB", # refurb
    # "RET", # flake8-return  (87 errors, autofixable)
    # "ARG", # flake8-arguments  (45 errors)
    # "FIX", # flake8-fixme  (25 errors)
    # "DTZ", # flake8-datetimez  (13 errors)
    # "PTH", # flake8-use-pathlib  (61 errors)
    # "BLE",  # flake8-blind-except (204 errors)
    # "FBT",  # flake8-boolean-trap (31 errors, needs refactoring)
    # "C90", # mccabe complexity (21 errors, needs heavy refactoring)
]
ignore = [
    "E402",
    "E501",  # line too long, handled by ruff format
    "S311",  # suspicious-non-cryptographic-random-usage
    "PLR",  # pylint-refactor
]


[tool.ruff.lint.per-file-ignores]
"ptn/boozebot/constants/__init__.py" = ["F403"]  # undefined-local-with-import-star

[tool.basedpyright]
include = ["ptn"]
reportOptionalMemberAccess=false
reportArgumentType=false
reportAny=false
reportExplicitAny=false
reportMissingTypeStubs=false
reportAttributeAccessIssue=false
reportAssignmentType=false
reportUnusedCallResult=false
reportUnknownVariableType=false
reportUnknownArgumentType=false
reportUnknownMemberType=false
reportUnknownParameterType=false

[tool.uv.sources]
ptn-utils = { git = "https://github.com/PilotsTradeNetwork/PTN-Library.git", rev = "1.1.0" }

[dependency-groups]
dev = [
    "basedpyright~=1.38.2",
    "ipython~=9.10.0",
    "ruff~=0.15.4",
]
